Wall completed, bug on second call